Add an opt-out for the CC-unsupported listeners detection
Some plugins out there may use unsupported listeners that do not really
affect task execution when skipped (e.g. because they only do statistic
reporting). We don't want users of such plugins to suffer CC failures.

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -764,6 +764,11 @@ are currently supported when the Configuration Cache is enabled.
 Previously, unsupported providers were silently discarded and never received events when the configuration cache was used.
 Starting with Gradle 9.0, registering such providers becomes a configuration cache problem and fails the build.
 
+If your build was correctly with configuration cache before (for example, the registered listeners weren't crucial for build correctness),
+you can temporarily revert to old behavior of ignoring such providers.
+To do that, set the Gradle property `org.gradle.configuration-cache.unsafe.ignore.unsupported-build-events-listeners` to `true`.
+This property will be removed in Gradle 10.
+
 [[changes_8.14]]
 == Upgrading from 8.13 and earlier
 
