Adds convention plugins best practice
Introduces a new best practice guide on using convention plugins
to encapsulate and reuse shared build logic across multiple projects.

This improves build maintainability, reduces duplication, and
centralizes configuration for common build tasks.

--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/multi_project_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/multi_project_builds.adoc
@@ -123,7 +123,7 @@ include::sample[dir="snippets/multiproject/customLayout/groovy",files="settings.
 
 Consult the link:{javadocPath}/org/gradle/api/initialization/ProjectDescriptor.html[ProjectDescriptor] class in the API documentation for more information.
 
-NOTE: Setting the link:{groovyDslPath}/org.gradle.api.Project.html#org.gradle.api.Project:projectDir[Project.projectDir] property is important when locating projects in nested subdirectories to <<best_practices_general.adoc#avoid_empty_projects,avoid unintentionally creating empty projects>>.
+NOTE: Setting the link:{groovyDslPath}/org.gradle.api.Project.html#org.gradle.api.Project:projectDir[Project.projectDir] property is important when locating projects in nested subdirectories to <<best_practices_structuring_builds.adoc#avoid_empty_projects,avoid unintentionally creating empty projects>>.
 
 [[include_existing_projects_only]]
 === Including projects without an existing directory
