Apply suggestions from code review
Mostly grammar corrections

Co-authored-by: Oleg Nenashev <o.v.nenashev@gmail.com>
Co-authored-by: Stefan Wolf <wolf@gradle.com>
Co-authored-by: Laura Kassovic <lkassovic@gradle.com>
Signed-off-by: Reinhold Degenfellner <rdegenfellner@gradle.com>

--- a/platforms/documentation/docs/src/docs/userguide/optimizing-builds/build-cache/build_cache_concepts.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/optimizing-builds/build-cache/build_cache_concepts.adoc
@@ -16,7 +16,7 @@
 
 How much of your build gets loaded from the cache depends on many factors.
 In this section you will see some of the tools that are essential for well-cached builds.
-A https://gradle.com/develocity/product/build-scan[Build Scan] is part of that toolchain and will be used throughout this guide.
+https://gradle.com/develocity/product/build-scan[Build Scan] is part of that toolchain and will be used throughout this guide.
 
 == Build cache key
 
