--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/plugins/reporting_problems.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/plugins/reporting_problems.adoc
@@ -18,7 +18,7 @@
 
 Plugins can report problems through Gradle's problems-reporting APIs.
 The APIs report rich, structured information about problems happening during the build.
-This information can be used by different user interfaces such as Gradle's console output, a Build Scan, or IDEs to communicate problems to the user in the most appropriate way.
+This information can be used by different user interfaces such as Gradle's console output, Build Scan, or IDEs to communicate problems to the user in the most appropriate way.
 
 The following example shows an issue reported from a plugin:
 
