--- a/platforms/documentation/docs/src/docs/userguide/optimizing-builds/performance.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/optimizing-builds/performance.adoc
@@ -161,7 +161,7 @@ When the parallel flag is used on our reference project, the build (`./gradlew c
 
 image::performance/performance-3.png[]
 
-=== Visualize Parallelism with a Build Scan
+=== Visualize Parallelism with Build Scan
 
 A Build Scan provides a visual timeline of task execution in the *"Timeline"* tab.
 
@@ -244,7 +244,7 @@ image::performance/performance-5.png[]
 For more information about the Build Cache, check out the
 <<build_cache_use_cases.adoc#use_cases_cache,Build Cache documentation>>.
 
-=== Visualize the Build Cache with a Build Scan
+=== Visualize the Build Cache with Build Scan
 
 A Build Scan helps you analyze *Build Cache effectiveness* through the *"Build Cache"* tab in the *"Performance"* page.
 This tab provides key statistics, including:
@@ -586,7 +586,7 @@ If a build file or initialization script lowers these values, Gradle queries rep
 When you don't need the absolute latest release of a dependency every time you build, consider
 removing the custom values for these settings.
 
-==== Find dynamic and changing versions with a Build Scan
+==== Find dynamic and changing versions with Build Scan
 
 To locate dynamic dependencies, use a Build Scan:
 
@@ -639,7 +639,7 @@ include::sample[dir="snippets/performance/resolveAtBuildTime/groovy",files="buil
 The `from()` method in Gradle’s `Copy` task does *not* trigger immediate <<dependency_configurations.adoc#sub:what-are-dependency-configurations,dependency resolution>> because it references the dependency *configuration*, not the resolved files.
 This ensures that dependencies are resolved only when the `Copy` task executes.
 
-==== Visualize dependency resolution with a Build Scan
+==== Visualize dependency resolution with Build Scan
 
 The "Dependency resolution" tab on the performance page of a Build Scan shows dependency
 resolution time during the configuration and execution phases:
@@ -658,7 +658,7 @@ Gradle allows users to model dependency resolution in a flexible way.
 Simple customizations, such as forcing specific versions or substituting dependencies, have minimal impact on resolution times.
 However, *complex custom logic*—such as downloading and parsing POM files manually—can significantly slow down dependency resolution.
 
-Use a *Build Scan* or *profile reports* to ensure custom dependency resolution logic is not causing performance issues.
+Use *Build Scan* or *profile reports* to ensure custom dependency resolution logic is not causing performance issues.
 This logic may exist in your build scripts or as part of a third-party plugin.
 
 This example forces a custom dependency version but also introduces expensive logic that slows down resolution:
