--- a/platforms/documentation/docs/src/docs/userguide/releases/migrating/migrating_from_maven.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/migrating/migrating_from_maven.adoc
@@ -51,7 +51,7 @@ This also means that users can try the Gradle build without creating a new copy 
 +
 A Build Scan will make it easier to visualize what's happening in your existing Maven build.
 For Maven builds, you will be able to see the project structure, what plugins are being used, a timeline of the build steps, and more.
-Keep this handy so you can compare it to the Gradle Build Scan while converting the project.
+Keep this handy so you can compare it to the Build Scan while converting the project.
 +
 . Develop a mechanism to verify that the two builds produce the same artifacts.
 +
@@ -81,7 +81,7 @@ Your build may fail at this point, but that's ok; the scan will still run.
 Compare the Build Scan for the Gradle build to the one for the Maven build and continue down this list to troubleshoot the failures.
 +
 We recommend that you regularly generate a Build Scan during the migration to help you identify and troubleshoot problems.
-If you want, you can also use a Gradle Build Scan to identify opportunities to <<performance.adoc#performance_gradle,improve the performance of the build>>.
+If you want, you can also use a Build Scan to identify opportunities to <<performance.adoc#performance_gradle,improve the performance of the build>>.
 +
  . <<migmvn:migrating_deps,Verify your dependencies and fix any problems>>.
 +
