--- a/platforms/documentation/docs/src/docs/userguide/releases/troubleshooting.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/troubleshooting.adoc
@@ -89,10 +89,10 @@ Common dependency resolution issues, such as resolving version conflicts, are co
 
 You can see a dependency tree and see which resolved dependency versions differed from what was requested by clicking the _Dependencies_ view and using the search functionality, specifying the resolution reason.
 
-.Debugging dependency conflicts with a Build Scan
+.Debugging dependency conflicts with Build Scan
 image::troubleshooting-dependency-management-build-scan.png[]
 
-The link:https://scans.gradle.com/s/sample/troubleshooting-userguide/dependencies?expandAll&filters=WzFd&toggled=W1swXSxbMF0sWzAsMF0sWzAsMV1d[actual Build Scan] with filtering criteria is available for exploration.
+The actual link:https://scans.gradle.com/s/sample/troubleshooting-userguide/dependencies?expandAll&filters=WzFd&toggled=W1swXSxbMF0sWzAsMF0sWzAsMV1d[Build Scan] with filtering criteria is available for exploration.
 
 [[sec:troubleshooting_performance]]
 == Troubleshooting slow builds
@@ -137,7 +137,7 @@ NOTE: Additional logs from the <<gradle_daemon.adoc#gradle_daemon,Gradle Daemon>
 
 `--info` logs explain why a task was executed, though a Build Scan does this in a searchable, visual way by going to the _Timeline_ view and clicking on the task you want to inspect.
 
-.Debugging incremental build with a Build Scan
+.Debugging incremental build with Build Scan
 image::troubleshooting-task-execution-build-scan.png[]
 
 You can learn what the task outcomes mean from <<more_about_tasks.adoc#sec:task_outcomes,this listing>>.
