--- a/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/build_scans.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/build_scans.adoc
@@ -19,7 +19,7 @@
 <div class="badge-wrapper">
     <a class="badge" href="https://dpeuniversity.gradle.com/app/courses/b5069222-cfd0-4393-b645-7a2c713853d5/" target="_blank">
         <span class="badge-type button--blue">LEARN</span>
-        <span class="badge-text">How to Use a Build Scan&nbsp;&nbsp;&nbsp;&gt;</span>
+        <span class="badge-text">How to Use Build Scan&nbsp;&nbsp;&nbsp;&gt;</span>
     </a>
 </div>
 ++++
@@ -35,14 +35,14 @@ The service then transforms the metadata into information you can analyze and sh
 
 image::build-scan-1.png[]
 
-The information that Build Scans collect can be an invaluable resource when troubleshooting, collaborating on, or optimizing the performance of your builds.
+The information that Build Scan collects can be an invaluable resource when troubleshooting, collaborating on, or optimizing the performance of your builds.
 
 For example, with a Build Scan, it’s no longer necessary to copy and paste error messages or include all the details about your environment each time you want to ask a question on Stack Overflow, Slack, or the Gradle Forum.
 Instead, copy the link to your latest Build Scan.
 
 image::build-scan-2.png[]
 
-== Enable a Build Scan
+== Enable Build Scan
 
 To enable a Build Scan on a Gradle command, add `--scan` to the command line option:
 
@@ -51,7 +51,7 @@ To enable a Build Scan on a Gradle command, add `--scan` to the command line opt
  ./gradlew build --scan
 ----
 
-You may be prompted to agree to the terms to use a Build Scan.
+You may be prompted to agree to the terms to use Build Scan.
 
 Visit the link:https://scans.gradle.com/[Build Scan page] to learn more.
 
