--- a/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part3_gradle_dep_man.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part3_gradle_dep_man.adoc
@@ -231,7 +231,7 @@ A https://scans.gradle.com/[Build Scan] is a shareable and centralized record of
 
 Click the link provided in the prompt: `https://gradle.com/s/link`.
 
-WARNING: You will have to accept the terms of service to use a Build Scan.
+WARNING: You will have to accept the terms of service to use Build Scan.
 
 You will need to activate the Build Scan by using your email:
 
