--- a/platforms/documentation/docs/src/docs/userguide/reference/glossary.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/reference/glossary.adoc
@@ -77,7 +77,7 @@ The configuration phase happens first and is single-threaded.
 
 [[sub:terminology_convention_plugin]]
 Convention Plugin::
-A <<sub:terminology_plugin,plugin>> built on top of an <<sub:terminology_ecosystem_plugin,ecosystem plugin>>, which applies common _conventions_ to the build script that uses the plugin.
+A <<#sub:terminology_plugin,plugin>> built on top of an <<sub:terminology_ecosystem_plugin,ecosystem plugin>>, which applies common _conventions_ to the build script that uses the plugin.
 
 [[sub:terminology_cross_configuration]]
 Cross-Configuration::
@@ -182,7 +182,7 @@ val myValue = layout.buildDirectory.file("output.txt")
 
 [[sub:terminology_ecosystem_plugin]]
 Ecosystem Plugin::
-A <<sub:terminology_plugin>> responsible for building a language, such as Java (`java` and `java-library`), Groovy, Scala, Android, Kotlin, etc.
+A <<#sub:terminology_plugin,plugin>> responsible for building a language, such as Java (`java` and `java-library`), Groovy, Scala, Android, Kotlin, etc.
 Many plugins are maintained by Gradle and are part of the Gradle distribution.
 
 [[sub:terminology_execution_phase]]
@@ -312,7 +312,7 @@ This distinction is merely an implementation detail.
 
 [[sub:terminology_precompiled_script_plugin]]
 Precompiled Script Plugin::
-Equivalent to a <<sub:terminology_plugin,plugin>>, but written such that it looks like a build script, precompiled script plugins can be written in Groovy or Kotlin by applying the `groovy-gradle-plugin` or `kotlin-dsl` plugin, respectively.
+Equivalent to a <<#sub:terminology_plugin,plugin>>, but written such that it looks like a build script, precompiled script plugins can be written in Groovy or Kotlin by applying the `groovy-gradle-plugin` or `kotlin-dsl` plugin, respectively.
 
 [[sub:terminology_project]]
 Project::
