--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -39,7 +39,7 @@ The previous step will help you identify potential problems by issuing deprecati
 [[changes_9.0]]
 == Upgrading from 8.14 and earlier
 
-=== Language and DSL Changes
+=== Language and DSL changes
 
 ==== Upgrade to Kotlin 2.1.21
 
@@ -51,6 +51,17 @@ This upgrade includes several important changes:
 * Kotlin language version 1.7 is now deprecated.
 
 For full details and potential breaking changes, consult the link:https://github.com/JetBrains/kotlin/releases/tag/v2.1.21[Kotlin release notes].
+
+==== Kotlin DSL now uses the Kotlin language version 2.1
+
+In Gradle 9.0, the Kotlin DSL has been upgraded to use Kotlin language version 2.1, whereas Gradle 8.x used version 1.8.
+For details, see the Kotlin 2.1 release notes.
+
+Due to changes in how the Kotlin 2 compiler handles script compilation, you can no longer refer to the script instance using labels like `this@Build_gradle`, `this@Settings_gradle`, or `this@Init_gradle`.
+If they are used to reference the DSL script target object, then use `project`, `settings`, or `gradle` instead.
+If they are used to reference a top-level symbol that happens to have the same name as a nested symbol, then use a different name, possibly by adding an intermediary variable.
+
+Read the link:#jspecify[JSpecify section] below to learn about potential breaking changes in Kotlin build logic code related to nullability.
 
 ==== Upgrade to Groovy 4.0.27
 
@@ -108,24 +119,7 @@ As a result, code compiled with Groovy 3.x may be unable to access `super` metho
 as the code does not contain the appropriate runtime code to locate them.
 This only applies to plugins written in Groovy 3.x, from Gradle 8.x and earlier.
 
-==== Kotlin DSL now uses the Kotlin language version 2.1
-
-In Gradle 9.0, the Kotlin DSL has been upgraded to use Kotlin language version 2.1, whereas Gradle 8.x used version 1.8.
-For details, see the Kotlin 2.1 release notes.
-
-Due to changes in how the Kotlin 2 compiler handles script compilation, you can no longer refer to the script instance using labels like `this@Build_gradle`, `this@Settings_gradle`, or `this@Init_gradle`.
-If they are used to reference the DSL script target object, then use `project`, `settings`, or `gradle` instead.
-If they are used to reference a top-level symbol that happens to have the same name as a nested symbol, then use a different name, possibly by adding an intermediary variable.
-
-Read the link:#jspecify[JSpecify section] below to learn about potential breaking changes in Kotlin build logic code related to nullability.
-
-==== Upgrade to Eclipse JGit 7.2.1
-
-Eclipse JGit has been updated from 5.13.3 to link:https://projects.eclipse.org/projects/technology.jgit/releases/7.2.1[7.2.1].
-
-This update reworks how Gradle configures JGit for SSH operations and introduces support for using the SSH Agent, leveraging the new capabilities available in link:https://github.com/eclipse-jgit/jgit/blob/v7.2.1.202505142326-r/org.eclipse.jgit.ssh.apache.agent/README.md[JGit’s] SSH agent integration.
-
-=== Plugin Changes
+=== Plugin changes
 
 ==== Plugins written with the Kotlin DSL require Gradle >= 8.11
 
@@ -205,25 +199,257 @@ However, these configurations were unresolvable and could lead to errors in the 
 
 As of Gradle 9.0, these configurations are no longer created or used by the Scala plugins.
 
-=== Updated Defaults and APIs
+=== Task changes
 
-==== Upgraded default versions of code quality tools
+[[validate_plugins_without_java_toolchain_90]]
+==== `ValidatePlugins` task now requires Java Toolchains
 
-The default version of Checkstyle is link:https://checkstyle.sourceforge.io/releasenotes.html#Release_10.24.0[10.24.0].
+In Gradle 9.0, using the link:{javadocPath}/org/gradle/plugin/devel/tasks/ValidatePlugins.html[`ValidatePlugins`] task without applying the <<toolchains.adoc#toolchains,Java Toolchains>> plugin will result in an error.
 
-The default version of CodeNarc is link:https://github.com/CodeNarc/CodeNarc/blob/v3.6.0/CHANGELOG.md#version-360--feb-2025[3.6.0].
+To fix this, explicitly apply the `jvm-toolchains` plugin:
 
-The default version of Pmd is link:https://github.com/pmd/pmd/releases/tag/pmd_releases%2F7.13.0[7.13.0]
+====
+[.multi-language-sample]
+=====
+.build.gradle.kts
+[source,kotlin]
+----
+plugins {
+    id("jvm-toolchains")
+}
+----
+=====
+[.multi-language-sample]
+=====
+.build.gradle
+[source,groovy]
+----
+plugins {
+    id 'jvm-toolchains'
+}
+----
+=====
+====
 
-==== Upgraded default versions of testing frameworks
+TIP: The `jvm-toolchains` plugin is automatically applied by the <<java_library_plugin.adoc#java_library_plugin,Java Library Plugin>> and other JVM-related plugins.
+If you are already applying one of those, no further action is needed.
 
-When using test suites, the version of several testing frameworks has changed.
+==== `test` task fails when no tests are discovered
 
-The default version of JUnit Jupiter is link:https://junit.org/junit5/docs/5.12.2/release-notes/index.html#release-notes-5.12.2[5.12.2].
+When test sources are present and no filters are applied, the `test` task will now fail with an error if it runs but doesn’t discover any tests.
+This is to help prevent misconfigurations where the tests are written for one test framework but the test task is mistakenly configured to use another test framework.
+If filters are applied, the outcome depends on the `failOnNoMatchingTests` property.
 
-The default version of TestNG is link:https://github.com/testng-team/testng/releases/tag/7.11.0[7.11.0].
+This behavior can be disabled by setting the `failOnNoDiscoveredTests` property to `false` in the test task configuration:
 
-The default version of Spock is link:https://spockframework.org/spock/docs/2.3/release_notes.html[2.3].
+====
+[.multi-language-sample]
+=====
+.build.gradle.kts
+[source,kotlin]
+----
+tasks.withType<AbstractTestTask>().configureEach {
+    failOnNoDiscoveredTests = false
+}
+----
+=====
+[.multi-language-sample]
+=====
+.build.gradle
+[source,groovy]
+----
+tasks.withType(AbstractTestTask).configureEach {
+    failOnNoDiscoveredTests = false
+}
+----
+=====
+====
+
+==== Stale outputs outside the build directory are no longer deleted
+
+In previous versions of Gradle, class files located outside the build directory were deleted when considered stale. This was a special case for class files registered as outputs of a source set.
+
+Because this setup is uncommon and forced Gradle to eagerly realize all compile related tasks in every build, the behavior has been removed in Gradle 9.0.
+
+Gradle will continue to clean up stale outputs inside the build directory as needed.
+
+==== `model` and `component` tasks are no longer automatically added
+
+The `model` and `component` tasks report on the structure of legacy software model objects configured for the project.
+Previously, these tasks were automatically added to the project for every build.
+These tasks are now only added to a project when a rule-based plugin is applied (such as those provided by Gradle's support for building native software).
+
+=== Configuration Cache changes
+
+==== Unsupported build event listeners are now configuration cache problems
+
+The build event listener registration method
+link:{javadocPath}/org/gradle/build/event/BuildEventsListenerRegistry.html#onTaskCompletion(org.gradle.api.provider.Provider)[`BuildEventsListenerRegistry.onTaskCompletion`]
+accepts arbitrary providers of any
+link:{javadocPath}/org/gradle/tooling/events/OperationCompletionListener.html[`OperationCompletionListener`]
+implementations.
+However, only providers returned from
+link:{javadocPath}/org/gradle/api/services/BuildServiceRegistry.html#registerIfAbsent(java.lang.String,java.lang.Class,org.gradle.api.Action)[`BuildServiceRegistry.registerIfAbsent`]
+or
+link:{javadocPath}/org/gradle/api/services/BuildServiceRegistration.html#getService()[`BuildServiceRegistration.getService`]
+are currently supported when the Configuration Cache is enabled.
+
+Previously, unsupported providers were silently discarded and never received events when the configuration cache was used.
+Starting with Gradle 9, registering such providers now causes a configuration cache problem and fails the build.
+
+If your build was previously working with the configuration cache (e.g., the listeners were nonessential),
+you can temporarily revert to the old behavior by setting:
+[source,properties]
+----
+org.gradle.configuration-cache.unsafe.ignore.unsupported-build-events-listeners=true
+----
+This property will be removed in Gradle 10.
+
+=== Packaging and Artifact changes
+
+==== Artifact Signing now matches OpenPGP Key Version
+
+Starting with Gradle 9.0, the `signing` plugin produces OpenPGP signatures that match the version of the key used. This change ensures compliance with link:https://www.rfc-editor.org/rfc/rfc9580.html[RFC 9580] and introduces support for OpenPGP version 6 keys.
+Previously, Gradle always generated OpenPGP version 4 signatures, regardless of the key version.
+
+==== Ear and War plugins build all artifacts with `assemble`
+
+Prior to Gradle 9.0, applying multiple packaging plugins (e.g., `ear`, `war`, `java`) to the same project resulted in special behavior where only one artifact type was built during `assemble`.
+For example:
+
+- Applying the `ear` plugin would skip building `war` and `jar` artifacts.
+- Applying the `war` plugin would skip building the `jar`.
+
+This special handling has been removed in Gradle 9.0.
+Now, if multiple packaging plugins are applied, all corresponding artifacts will be built when running the `assemble` task.
+For example, a project applying the `ear`, `war`, and `java plugins` will now produce `.ear`, `.war`, and `.jar` files during `assemble`.
+
+==== Ear and War plugins contribute all artifacts to the `archives` configuration
+
+In previous versions of Gradle, applying multiple packaging plugins (`ear`, `war`, `java`) resulted in selective behavior for the `archives` configuration.
+For example:
+
+- Applying the `ear` plugin excluded `jar` and `war` artifacts from archives.
+- Applying the `war` plugin excluded the `jar` artifact from archives.
+
+This behavior has been removed in Gradle 9.0.
+Now, when multiple packaging plugins are applied, all related artifacts—EAR, WAR, and JAR—are included in the `archives` configuration.
+
+==== Gradle no longer implicitly builds certain artifacts during `assemble`
+
+In previous versions of Gradle, the `assemble` task would implicitly build artifacts from any configuration where the `visible` flag was not set to `false`.
+This behavior has been removed in Gradle 9.0.
+
+If you have a custom configuration and want its artifact to be built as part of `assemble`, you now need to explicitly declare the dependency between the artifact and the `assemble` task:
+
+====
+[.multi-language-sample]
+=====
+.build.gradle.kts
+[source,kotlin]
+----
+val specialJar = tasks.register<Jar>("specialJar") {
+    from("foo")
+}
+
+val special = configurations.create("special") {
+    // In previous versions, this would have been enough to build the specialJar
+    // artifact when running assemble
+    outgoing.artifact(specialJar)
+}
+
+// In Gradle 9.0, you need to add a dependency from the artifact to the assemble task
+tasks.named("assemble") {
+    dependsOn(special.artifacts)
+}
+----
+=====
+[.multi-language-sample]
+=====
+.build.gradle
+[source,groovy]
+----
+def specialJar = tasks.register("specialJar". Jar) {
+    from("foo")
+}
+
+def special = configurations.create("special") {
+    // In previous versions, this would have been enough to build the specialJar
+    // artifact when running assemble
+    outgoing.artifact(specialJar)
+}
+
+// In Gradle 9.0, you need to add a dependency from the artifact to the assemble task
+tasks.named("assemble") {
+    dependsOn(special.artifacts)
+}
+----
+=====
+====
+
+==== Gradle no longer implicitly adds certain artifacts to the `archives` configuration
+
+In previous versions of Gradle, the `archives` configuration would automatically include artifacts from any configuration where the `visible` flag was not set to `false`.
+This implicit behavior has been removed in Gradle 9.0.
+
+To include a custom artifact in the `archives` configuration, you must now add it explicitly:
+
+====
+[.multi-language-sample]
+=====
+.build.gradle.kts
+[source,kotlin]
+----
+val specialJar = tasks.register<Jar>("specialJar") {
+    from("foo")
+}
+
+configurations {
+    create("special") {
+        // In previous versions, this would have been enough to add the specialJar
+        // artifact to the archives configuration
+        outgoing.artifact(specialJar)
+    }
+    // In Gradle 9.0, you need to explicitly add the artifact to the archives
+    // configuration
+    named("archives") {
+        outgoing.artifact(specialJar)
+    }
+}
+----
+=====
+[.multi-language-sample]
+=====
+.build.gradle
+[source,groovy]
+----
+def specialJar = tasks.register("specialJar". Jar) {
+    from("foo")
+}
+
+configurations {
+    create("special") {
+        // In previous versions, this would have been enough to add the specialJar
+        // artifact to the archives configuration
+        outgoing.artifact(specialJar)
+    }
+    // In Gradle 9.0, you need to explicitly add the artifact to the archives
+    // configuration
+    named("archives") {
+        outgoing.artifact(specialJar)
+    }
+}
+----
+=====
+====
+
+==== Gradle Module Metadata can no longer be modified after an eagerly created publication is created from the same component
+
+This behavior previously caused a warning: `Gradle Module Metadata is modified after an eagerly populated publication.`
+
+It will now fail with an error, suggesting a review of the relevant documentation.
+
+=== API changes
 
 [[jspecify]]
 ==== Gradle API now uses JSpecify nullability annotations
@@ -285,7 +511,33 @@ For example, the link:{javadocPath}/org/gradle/api/artifacts/result/ComponentRes
 In future Gradle versions, additional subtypes of `ComponentIdentifier` may be introduced.
 Build logic should remain resilient to unknown `ComponentIdentifier` subtypes returned by Gradle APIs.
 
-=== Removed Features and Deprecated APIs
+=== Updated versions
+
+==== Upgraded default versions of code quality tools
+
+The default version of Checkstyle is link:https://checkstyle.sourceforge.io/releasenotes.html#Release_10.24.0[10.24.0].
+
+The default version of CodeNarc is link:https://github.com/CodeNarc/CodeNarc/blob/v3.6.0/CHANGELOG.md#version-360--feb-2025[3.6.0].
+
+The default version of Pmd is link:https://github.com/pmd/pmd/releases/tag/pmd_releases%2F7.13.0[7.13.0]
+
+==== Upgraded default versions of testing frameworks
+
+When using test suites, the version of several testing frameworks has changed.
+
+The default version of JUnit Jupiter is link:https://junit.org/junit5/docs/5.12.2/release-notes/index.html#release-notes-5.12.2[5.12.2].
+
+The default version of TestNG is link:https://github.com/testng-team/testng/releases/tag/7.11.0[7.11.0].
+
+The default version of Spock is link:https://spockframework.org/spock/docs/2.3/release_notes.html[2.3].
+
+==== Upgraded version of Eclipse JGit
+
+Eclipse JGit has been updated from 5.13.3 to link:https://projects.eclipse.org/projects/technology.jgit/releases/7.2.1[7.2.1].
+
+This update reworks how Gradle configures JGit for SSH operations and introduces support for using the SSH Agent, leveraging the new capabilities available in link:https://github.com/eclipse-jgit/jgit/blob/v7.2.1.202505142326-r/org.eclipse.jgit.ssh.apache.agent/README.md[JGit’s] SSH agent integration.
+
+=== Removed APIs and features
 
 ==== Removal of deprecated `JvmVendorSpec.IBM_SEMERU`
 
@@ -521,257 +773,6 @@ The following helper methods for launching external processes were <<#deprecated
 * `org.gradle.kotlin.dsl.KotlinScript#javaexec(Action)`
 * `org.gradle.kotlin.dsl.SettingsScriptApi#exec(Action)`
 * `org.gradle.kotlin.dsl.SettingsScriptApi#javaexec(Action)`
-
-=== Packaging and Artifact Behavior Changes
-
-==== Artifact Signing now matches OpenPGP Key Version
-
-Starting with Gradle 9.0, the `signing` plugin produces OpenPGP signatures that match the version of the key used. This change ensures compliance with link:https://www.rfc-editor.org/rfc/rfc9580.html[RFC 9580] and introduces support for OpenPGP version 6 keys.
-Previously, Gradle always generated OpenPGP version 4 signatures, regardless of the key version.
-
-==== Ear and War plugins build all artifacts with `assemble`
-
-Prior to Gradle 9.0, applying multiple packaging plugins (e.g., `ear`, `war`, `java`) to the same project resulted in special behavior where only one artifact type was built during `assemble`.
-For example:
-
-- Applying the `ear` plugin would skip building `war` and `jar` artifacts.
-- Applying the `war` plugin would skip building the `jar`.
-
-This special handling has been removed in Gradle 9.0.
-Now, if multiple packaging plugins are applied, all corresponding artifacts will be built when running the `assemble` task.
-For example, a project applying the `ear`, `war`, and `java plugins` will now produce `.ear`, `.war`, and `.jar` files during `assemble`.
-
-==== Ear and War plugins contribute all artifacts to the `archives` configuration
-
-In previous versions of Gradle, applying multiple packaging plugins (`ear`, `war`, `java`) resulted in selective behavior for the `archives` configuration.
-For example:
-
-- Applying the `ear` plugin excluded `jar` and `war` artifacts from archives.
-- Applying the `war` plugin excluded the `jar` artifact from archives.
-
-This behavior has been removed in Gradle 9.0.
-Now, when multiple packaging plugins are applied, all related artifacts—EAR, WAR, and JAR—are included in the `archives` configuration.
-
-==== Gradle no longer implicitly builds certain artifacts during `assemble`
-
-In previous versions of Gradle, the `assemble` task would implicitly build artifacts from any configuration where the `visible` flag was not set to `false`.
-This behavior has been removed in Gradle 9.0.
-
-If you have a custom configuration and want its artifact to be built as part of `assemble`, you now need to explicitly declare the dependency between the artifact and the `assemble` task:
-
-====
-[.multi-language-sample]
-=====
-.build.gradle.kts
-[source,kotlin]
-----
-val specialJar = tasks.register<Jar>("specialJar") {
-    from("foo")
-}
-
-val special = configurations.create("special") {
-    // In previous versions, this would have been enough to build the specialJar
-    // artifact when running assemble
-    outgoing.artifact(specialJar)
-}
-
-// In Gradle 9.0, you need to add a dependency from the artifact to the assemble task
-tasks.named("assemble") {
-    dependsOn(special.artifacts)
-}
-----
-=====
-[.multi-language-sample]
-=====
-.build.gradle
-[source,groovy]
-----
-def specialJar = tasks.register("specialJar". Jar) {
-    from("foo")
-}
-
-def special = configurations.create("special") {
-    // In previous versions, this would have been enough to build the specialJar
-    // artifact when running assemble
-    outgoing.artifact(specialJar)
-}
-
-// In Gradle 9.0, you need to add a dependency from the artifact to the assemble task
-tasks.named("assemble") {
-    dependsOn(special.artifacts)
-}
-----
-=====
-====
-
-==== Gradle no longer implicitly adds certain artifacts to the `archives` configuration
-
-In previous versions of Gradle, the `archives` configuration would automatically include artifacts from any configuration where the `visible` flag was not set to `false`.
-This implicit behavior has been removed in Gradle 9.0.
-
-To include a custom artifact in the `archives` configuration, you must now add it explicitly:
-
-====
-[.multi-language-sample]
-=====
-.build.gradle.kts
-[source,kotlin]
-----
-val specialJar = tasks.register<Jar>("specialJar") {
-    from("foo")
-}
-
-configurations {
-    create("special") {
-        // In previous versions, this would have been enough to add the specialJar
-        // artifact to the archives configuration
-        outgoing.artifact(specialJar)
-    }
-    // In Gradle 9.0, you need to explicitly add the artifact to the archives
-    // configuration
-    named("archives") {
-        outgoing.artifact(specialJar)
-    }
-}
-----
-=====
-[.multi-language-sample]
-=====
-.build.gradle
-[source,groovy]
-----
-def specialJar = tasks.register("specialJar". Jar) {
-    from("foo")
-}
-
-configurations {
-    create("special") {
-        // In previous versions, this would have been enough to add the specialJar
-        // artifact to the archives configuration
-        outgoing.artifact(specialJar)
-    }
-    // In Gradle 9.0, you need to explicitly add the artifact to the archives
-    // configuration
-    named("archives") {
-        outgoing.artifact(specialJar)
-    }
-}
-----
-=====
-====
-
-==== Gradle Module Metadata can no longer be modified after an eagerly created publication is created from the same component
-
-This behavior previously caused a warning: `Gradle Module Metadata is modified after an eagerly populated publication.`
-
-It will now fail with an error, suggesting a review of the relevant documentation.
-
-=== Task Changes
-
-[[validate_plugins_without_java_toolchain_90]]
-==== `ValidatePlugins` task now requires Java Toolchains
-
-In Gradle 9.0, using the link:{javadocPath}/org/gradle/plugin/devel/tasks/ValidatePlugins.html[`ValidatePlugins`] task without applying the <<toolchains.adoc#toolchains,Java Toolchains>> plugin will result in an error.
-
-To fix this, explicitly apply the `jvm-toolchains` plugin:
-
-====
-[.multi-language-sample]
-=====
-.build.gradle.kts
-[source,kotlin]
-----
-plugins {
-    id("jvm-toolchains")
-}
-----
-=====
-[.multi-language-sample]
-=====
-.build.gradle
-[source,groovy]
-----
-plugins {
-    id 'jvm-toolchains'
-}
-----
-=====
-====
-
-TIP: The `jvm-toolchains` plugin is automatically applied by the <<java_library_plugin.adoc#java_library_plugin,Java Library Plugin>> and other JVM-related plugins.
-If you are already applying one of those, no further action is needed.
-
-==== `test` task fails when no tests are discovered
-
-When test sources are present and no filters are applied, the `test` task will now fail with an error if it runs but doesn’t discover any tests.
-This is to help prevent misconfigurations where the tests are written for one test framework but the test task is mistakenly configured to use another test framework.
-If filters are applied, the outcome depends on the `failOnNoMatchingTests` property.
-
-This behavior can be disabled by setting the `failOnNoDiscoveredTests` property to `false` in the test task configuration:
-
-====
-[.multi-language-sample]
-=====
-.build.gradle.kts
-[source,kotlin]
-----
-tasks.withType<AbstractTestTask>().configureEach {
-    failOnNoDiscoveredTests = false
-}
-----
-=====
-[.multi-language-sample]
-=====
-.build.gradle
-[source,groovy]
-----
-tasks.withType(AbstractTestTask).configureEach {
-    failOnNoDiscoveredTests = false
-}
-----
-=====
-====
-
-==== Stale outputs outside the build directory are no longer deleted
-
-In previous versions of Gradle, class files located outside the build directory were deleted when considered stale. This was a special case for class files registered as outputs of a source set.
-
-Because this setup is uncommon and forced Gradle to eagerly realize all compile related tasks in every build, the behavior has been removed in Gradle 9.0.
-
-Gradle will continue to clean up stale outputs inside the build directory as needed.
-
-==== `model` and `component` tasks are no longer automatically added
-
-The `model` and `component` tasks report on the structure of legacy software model objects configured for the project.
-Previously, these tasks were automatically added to the project for every build.
-These tasks are now only added to a project when a rule-based plugin is applied (such as those provided by Gradle's support for building native software).
-
-
-=== Configuration Cache changes
-
-==== Unsupported build event listeners are now configuration cache problems
-
-The build event listener registration method
-link:{javadocPath}/org/gradle/build/event/BuildEventsListenerRegistry.html#onTaskCompletion(org.gradle.api.provider.Provider)[`BuildEventsListenerRegistry.onTaskCompletion`]
-accepts arbitrary providers of any
-link:{javadocPath}/org/gradle/tooling/events/OperationCompletionListener.html[`OperationCompletionListener`]
-implementations.
-However, only providers returned from
-link:{javadocPath}/org/gradle/api/services/BuildServiceRegistry.html#registerIfAbsent(java.lang.String,java.lang.Class,org.gradle.api.Action)[`BuildServiceRegistry.registerIfAbsent`]
-or
-link:{javadocPath}/org/gradle/api/services/BuildServiceRegistration.html#getService()[`BuildServiceRegistration.getService`]
-are currently supported when the Configuration Cache is enabled.
-
-Previously, unsupported providers were silently discarded and never received events when the configuration cache was used.
-Starting with Gradle 9, registering such providers now causes a configuration cache problem and fails the build.
-
-If your build was previously working with the configuration cache (e.g., the listeners were nonessential),
-you can temporarily revert to the old behavior by setting:
-[source,properties]
-----
-org.gradle.configuration-cache.unsafe.ignore.unsupported-build-events-listeners=true
-----
-This property will be removed in Gradle 10.
 
 [[changes_8.14]]
 == Upgrading from 8.13 and earlier
